fix: add closeBtn on mobile forms

--- a/src/components/Forms/Auth/auth.module.scss
+++ b/src/components/Forms/Auth/auth.module.scss
@@ -328,6 +328,11 @@ input[type="checkbox"] {
     height: 47.375em;
   }
 
+  .closeBtn {
+    left: 23.9em;
+    top: 0.7em;
+  }
+
   .modalHeader {
     justify-content: space-between;
     padding: 0em;
