--- a/src/components/Forms/AuthOrder/authOrder.module.scss
+++ b/src/components/Forms/AuthOrder/authOrder.module.scss
@@ -214,6 +214,11 @@
         height: 36.5625em;
     }
 
+    .closeBtn {
+        left: 23.7em;
+        top: 0.8em;
+    }
+
     .modalHeader {
         padding: 0em;
         gap: 1em;
