--- a/src/components/Forms/Authorization/authorization.module.scss
+++ b/src/components/Forms/Authorization/authorization.module.scss
@@ -325,6 +325,11 @@ input[type="checkbox"] {
     height: 60.875em;
   }
 
+  .closeBtn {
+    left: 23.9em;
+    top: 0.7em;
+  }
+
   .modalHeader {
     justify-content: space-between;
     padding: 0em;
