--- a/src/components/Forms/Order/order.module.scss
+++ b/src/components/Forms/Order/order.module.scss
@@ -227,6 +227,12 @@
     height: 43.125em;
   }
 
+  
+  .closeBtn {
+    left: 23.7em;
+    top: 0.8em;
+  }
+
   .modalHeader {
     padding: 0em;
     gap: 1em;
